[gd_scene load_steps=17 format=3 uid="uid://lshef04788i0"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_47a06"]
[ext_resource type="Texture2D" uid="uid://d18krcctk0f5g" path="res://assets/items/doorLW-sprite.png" id="3_1x16i"]
[ext_resource type="AudioStream" uid="uid://cf1rs8xnl2vr" path="res://Platformer-25-Assets (1)/Platformer-25-Assets/question_003.ogg" id="3_uhrvo"]
[ext_resource type="AudioStream" uid="uid://bro5wxea26iu4" path="res://Platformer-25-Assets (1)/Platformer-25-Assets/pepSound1.ogg" id="4_xt2pg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m7nrr"]
atlas = ExtResource("3_1x16i")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh726"]
atlas = ExtResource("3_1x16i")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fj7e"]
atlas = ExtResource("3_1x16i")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfivf"]
atlas = ExtResource("3_1x16i")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_we2ht"]
atlas = ExtResource("3_1x16i")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_giu2o"]
atlas = ExtResource("3_1x16i")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p08do"]
atlas = ExtResource("3_1x16i")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn4v4"]
atlas = ExtResource("3_1x16i")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq4v6"]
atlas = ExtResource("3_1x16i")
region = Rect2(128, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c2gvn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7nrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh726")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fj7e")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfivf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we2ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giu2o")
}],
"loop": true,
"name": &"locked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p08do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn4v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq4v6")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmhtq"]
size = Vector2(8, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkngt"]
size = Vector2(37, 18)

[node name="Door" type="Area2D"]
position = Vector2(0, -8)
script = ExtResource("1_47a06")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_c2gvn")
animation = &"locked"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_lmhtq")

[node name="NearDoor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearDoor"]
position = Vector2(0, 7)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_mkngt")

[node name="SoundUnlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_uhrvo")
volume_db = -15.0

[node name="SoundLocked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xt2pg")
volume_db = -2.0

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="body_entered" from="NearDoor" to="." method="_on_NearDoor_body_entered"]
